<resources>
    <string name="app_name">ICalc</string>

    <!-- Main -->
    <string name="name">Name</string>
    <string name="otomate">OTM</string>
    <string name="comprehensive">Comprehensive</string>
    <string name="total_lost_only">Total Lost Only</string>
    <string name="icon_transition">icon_transition</string>

    <!-- Login -->
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="complete_information_required">Mohon melengkapi informasi login anda</string>
    <string name="logging_in">Mohon tunggu</string>
    <string name="app_needs_phone_state">App memerlukan ijin untuk mendapatkan informasi smartphone</string>

    <!-- Calculation -->
    <string name="vehicle">Kendaraan</string>
    <string name="vehicle_insurance_calculation">Kalkulasi asuransi kendaraan</string>
    <string name="rp">Rp</string>
    <string name="vehicle_manufacturer">Merek kendaraan</string>
    <string name="insured_name">Nama tertanggung</string>
    <string name="insured_name_missing">Nama tertanggung harus diisi</string>
    <string name="vehicle_manufacturer_missing">Merek kendaraan harus diisi</string>
    <string name="vehicle_price">Harga Kendaraan</string>
    <string name="vehicle_price_missing">Harga kendaraan harus diisi</string>
    <string name="vehicle_category">Kategori Kendaraan</string>
    <string name="insurance_type">Jenis Asuransi</string>
    <string name="otomate_type">Jenis Otomate</string>
    <string name="insurance_type_colon">Jenis Asuransi :</string>
    <string name="vehicle_year">Tahun Kendaraan</string>
    <string name="region">Wilayah</string>
    <string name="additional_options">Perluasan</string>
    <string name="calculate">Hitung</string>
    <!-- Insurance Category -->
    <string name="non_truck">Non Truck</string>
    <string name="truck_pickup_box">Truck/PickUp/Box</string>
    <string name="bus">Bus</string>
    <!-- Area -->
    <string name="area_1">Wilayah 1</string>
    <string name="area_2">Wilayah 2</string>
    <string name="area_3">Wilayah 3</string>
    <!-- Additional Info -->
    <string name="otomate_no_add_opt">OTM tidak memiliki perluasan</string>
    <string name="add_option_otomate">Perluasan Jaminan OTM</string>
    <string name="third_party_responsibility">Tanggung Jawab pihak ke 3</string>
    <string name="third_party_responsibility_roman">Tanggung Jawab pihak III</string>
    <string name="personal_accident">Personal Accident</string>
    <string name="flood_quake">Banjir &amp; Gempa 100%</string>
    <string name="mil_20">20 Juta</string>
    <string name="mil_30">30 Juta</string>
    <string name="mil_40">40 Juta</string>
    <string name="mil_50">50 Juta</string>

    <string name="tsfwd">TSFWD (Banjir, Kerusakan akibat air)</string>
    <string name="eqvet">EQVET (Gempa, Tanah longsor, Letusan gunung berapi)</string>
    <string name="srcc">SRCC (Kerusuhan dan huru hara)</string>
    <string name="ts">TS (Terorisme)</string>

    <!-- Result -->
    <string name="premi_colon"><b>Premi :</b> %1$,.2f</string>
    <string name="send_application">Kirim aplikasi</string>
    <string name="sending_application">Mengirim aplikasi…</string>>
    <string name="application_sent">Aplikasi telah terkirim</string>
    <string name="email_missing">Mohon masukkan email anda untuk pengiriman dokumen aplikasi</string>

    <string name="calculator">Calculator</string>

    <string name="placeholder_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec leo sapien. Pellentesque elementum dignissim lacinia. Pellentesque eu leo ex. Quisque sapien orci, faucibus in dapibus vitae, sagittis eget odio. Proin eleifend non augue a sollicitudin. Morbi ac efficitur nulla. Curabitur sit amet ex non tellus gravida consequat a eu arcu. Suspendisse a aliquet mauris. Aenean vulputate dui ac pharetra sodales. Donec euismod, justo quis tempus bibendum, mi eros laoreet purus, non dictum dolor nibh a risus. Curabitur rhoncus, odio rutrum molestie laoreet, velit elit faucibus eros, et euismod arcu tellus id diam. Mauris nec semper ante. Vivamus blandit in enim nec finibus.</string>

    <!-- General -->
    <string name="expand">Expand</string>
    <string name="confirm">Confirm</string>
    <string name="standard">Standard</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>
    <string name="mister">Bapak</string>
    <string name="miss">Ibu</string>

    <string name="error_connection">Terjadi gangguan pada internet, silahkan coba lagi</string>
</resources>