<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen500"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="64dp"
            android:minWidth="64dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_email_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            app:hintTextAppearance="@style/AppTheme.TilHintStyle">

            <com.gmg.icalc.CustomViews.CustomFontEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:minWidth="300dp"
            app:hintTextAppearance="@style/AppTheme.TilHintStyle">

            <com.gmg.icalc.CustomViews.CustomFontEditText
                android:id="@+id/login_pasword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <com.gmg.icalc.CustomViews.CustomFontButton
            android:id="@+id/login_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_large_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_white"
            android:textColor="@color/black"
            android:text="@string/login" />

    </LinearLayout>

</ScrollView>