<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmg.icalc.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <FrameLayout
                android:id="@+id/main.framelayout.title"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="vertical"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.3">

                <LinearLayout
                    android:id="@+id/main.linearlayout.title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <com.gmg.icalc.CustomViews.CustomFontTextView
                        android:id="@+id/main_welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="bottom|center"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                </LinearLayout>

            </FrameLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.gmg.icalc.CustomViews.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/placeholder_ipsum" />

            <!-- Otomate -->
            <LinearLayout
                android:id="@+id/main_otomate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_backgroundtv_height"
                android:background="@color/lightGreen300"
                android:orientation="horizontal">

                <com.gmg.icalc.CustomViews.CustomFontTextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/main_backgroundtv_height"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/otomate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_large" />

                <ImageView
                    android:layout_width="@dimen/main_backgroundtv_height"
                    android:layout_height="@dimen/main_backgroundtv_height"
                    android:contentDescription="@string/expand"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_keyboard_arrow_down_white_24dp" />

            </LinearLayout>

            <com.gmg.icalc.CustomViews.CustomFontTextView
                android:id="@+id/main_otomate_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGreen300"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/placeholder_ipsum"
                android:textColor="@color/white"
                android:visibility="gone" />

            <!-- Comprehensive -->
            <LinearLayout
                android:id="@+id/main_comprehensive"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_backgroundtv_height"
                android:background="@color/lightGreen500"
                android:orientation="horizontal">

                <com.gmg.icalc.CustomViews.CustomFontTextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/main_backgroundtv_height"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/comprehensive"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_large" />

                <ImageView
                    android:layout_width="@dimen/main_backgroundtv_height"
                    android:layout_height="@dimen/main_backgroundtv_height"
                    android:contentDescription="@string/expand"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_keyboard_arrow_down_white_24dp" />

            </LinearLayout>

            <com.gmg.icalc.CustomViews.CustomFontTextView
                android:id="@+id/main_comprehensive_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGreen500"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/placeholder_ipsum"
                android:textColor="@color/white"
                android:visibility="gone" />

            <!-- Total Lost Only -->
            <LinearLayout
                android:id="@+id/main_total_lost"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_backgroundtv_height"
                android:background="@color/lightGreen700"
                android:orientation="horizontal">

                <com.gmg.icalc.CustomViews.CustomFontTextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/main_backgroundtv_height"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/total_lost_only"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_large" />

                <ImageView
                    android:layout_width="@dimen/main_backgroundtv_height"
                    android:layout_height="@dimen/main_backgroundtv_height"
                    android:contentDescription="@string/expand"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_keyboard_arrow_down_white_24dp" />

            </LinearLayout>

            <com.gmg.icalc.CustomViews.CustomFontTextView
                android:id="@+id/main_total_lost_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGreen700"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/placeholder_ipsum"
                android:textColor="@color/white"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/main.toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_anchor="@id/main.framelayout.title"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main.textview.title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="asdasda"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="@dimen/avatar_large"
        android:layout_height="@dimen/avatar_large"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_info_outline_white_48dp"
        app:finalHeight="@dimen/image_final_width"
        app:finalYPosition="2dp"
        app:layout_behavior="com.gmg.icalc.AvatarImageBehavior"
        app:startHeight="2dp"
        app:startToolbarPosition="2dp"
        app:startXPosition="2dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/main_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:scaleType="centerInside"
        android:src="@drawable/ic_info_outline_white_48dp"
        app:fabSize="auto"
        tools:ignore="RtlHardcoded" />

</android.support.design.widget.CoordinatorLayout>
